5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1771_3121.log
== TEST (2019-05-24 15:01:01) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(vet1)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1
print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
	print("")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:01:46) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa) and cont < len(barsa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1
print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
	print("")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:04:21) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa) and cont < len(barsa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)

if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:05:30) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:05:54) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:06:29) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:07:15) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1
	print(cont)

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:13:26) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0
n = 0
s = 0
k = 0
p = 0
u = 0
e = 0
while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22 and n == 0):
		VitB+=1
		n = n + 1
	while (eusa[cont] == 11 and barsa[cont] == 33 and s == 0):
		VitE+=1
		s = s + 1
	while (eusa[cont] == 22 and barsa[cont] == 11 and k == 0):
		VitE+=1
		k = k + 1
	while (eusa[cont] == 22 and barsa[cont] == 33 and p == 0):
		VitE+=1
		p = p + 1
	while (eusa[cont] == 33 and barsa[cont] == 11 and u == 0):
		VitB+=1
		u = u + 1
	while (eusa[cont] == 33 and barsa[cont] == 22 and e == 0):
		VitE+=1
		e = e + 1
	cont+=1
	print(cont)

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:13:58) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0
n = 0
s = 0
k = 0
p = 0
u = 0
e = 0
while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22 and n == 0):
		VitB+=1
		n = n + 1
	while (eusa[cont] == 11 and barsa[cont] == 33 and s == 0):
		VitE+=1
		s = s + 1
	while (eusa[cont] == 22 and barsa[cont] == 11 and k == 0):
		VitE+=1
		k = k + 1
	while (eusa[cont] == 22 and barsa[cont] == 33 and p == 0):
		VitE+=1
		p = p + 1
	while (eusa[cont] == 33 and barsa[cont] == 11 and u == 0):
		VitB+=1
		u = u + 1
	while (eusa[cont] == 33 and barsa[cont] == 22 and e == 0):
		VitE+=1
		e = e + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:14:24) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0
n = 0
s = 0
k = 0
p = 0
u = 0
e = 0
while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22 and n == 0):
		VitB+=1
		n = n + 1
	while (eusa[cont] == 11 and barsa[cont] == 33 and s == 0):
		VitE+=1
		s = s + 1
	while (eusa[cont] == 22 and barsa[cont] == 11 and k == 0):
		VitE+=1
		k = k + 1
	while (eusa[cont] == 22 and barsa[cont] == 33 and p == 0):
		VitE+=1
		p = p + 1
	while (eusa[cont] == 33 and barsa[cont] == 11 and u == 0):
		VitB+=1
		u = u + 1
	while (eusa[cont] == 33 and barsa[cont] == 22 and e == 0):
		VitE+=1
		e = e + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:15:00) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0
n = 0
s = 0
k = 0
p = 0
u = 0
e = 0
while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22 and n == 0):
		VitB+=1
		n = n + 1
	while (eusa[cont] == 11 and barsa[cont] == 33 and s == 0):
		VitE+=1
		s = s + 1
	while (eusa[cont] == 22 and barsa[cont] == 11 and k == 0):
		VitE+=1
		k = k + 1
	while (eusa[cont] == 22 and barsa[cont] == 33 and p == 0):
		VitE+=1
		p = p + 1
	while (eusa[cont] == 33 and barsa[cont] == 11 and u == 0):
		VitB+=1
		u = u + 1
	while (eusa[cont] == 33 and barsa[cont] == 22 and e == 0):
		VitE+=1
		e = e + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.11186
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:16:00) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0
n = 0
s = 0
k = 0
p = 0
u = 0
e = 0
while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22 and n == 0):
		VitB+=1
		n = n + 1
	while (eusa[cont] == 11 and barsa[cont] == 33 and s == 0):
		VitE+=1
		s = s + 1
	while (eusa[cont] == 22 and barsa[cont] == 11 and k == 0):
		VitE+=1
		k = k + 1
	while (eusa[cont] == 22 and barsa[cont] == 33 and p == 0):
		VitE+=1
		p = p + 1
	while (eusa[cont] == 33 and barsa[cont] == 11 and u == 0):
		VitB+=1
		u = u + 1
	while (eusa[cont] == 33 and barsa[cont] == 22 and e == 0):
		VitE+=1
		e = e + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:16:34) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0
n = 0
s = 0
k = 0
p = 0
u = 0
e = 0
while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22 and n == 0):
		VitB+=1
		n = n + 1
	while (eusa[cont] == 11 and barsa[cont] == 33 and s == 0):
		VitE+=1
		s = s + 1
	while (eusa[cont] == 22 and barsa[cont] == 11 and k == 0):
		VitE+=1
		k = k + 1
	while (eusa[cont] == 22 and barsa[cont] == 33 and p == 0):
		VitE+=1
		p = p + 1
	while (eusa[cont] == 33 and barsa[cont] == 11 and u == 0):
		VitB+=1
		u = u + 1
	while (eusa[cont] == 33 and barsa[cont] == 22 and e == 0):
		VitE+=1
		e = e + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:20:05) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:21:15) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.25714
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:22:30) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	if (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	elif (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	elif (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:22:50) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	if (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	elif (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	elif (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.1982
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:26:55) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	if (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	elif (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 33):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.19208
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:27:55) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.00524
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:31:01) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa) and cont < len(barsa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)

if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
925.633
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:31:01) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa) and cont < len(barsa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitE+=1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)

if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
	print("")
-- EXECUTION TIME:
893.839
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:50:06) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
	
'''from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	if (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	elif (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 33):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")''''''
-- EXECUTION TIME:
0.192974
-- ERROR:
  File "/home/codebench/codes/1771/3121/main.py", line 70
    print("EMPATE")''''''
                        ^
SyntaxError: EOF while scanning triple-quoted string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:51:03) 
-- CODE:
from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	while (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 22 and barsa[cont] == 33):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
		eusa[cont] = eusa[cont] + 1
	while (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
		eusa[cont] = eusa[cont] + 1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")
	
'''from numpy import *

eusa = array(eval(input()))
barsa = array(eval(input()))

VitE = 0
VitB = 0
cont = 0

while (cont < len(eusa)):
	if (eusa[cont] == 11 and barsa[cont] == 22):
		VitB+=1
	elif (eusa[cont] == 11 and barsa[cont] == 33):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 11):
		VitE+=1
	elif (eusa[cont] == 22 and barsa[cont] == 33):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 11):
		VitB+=1
	elif (eusa[cont] == 33 and barsa[cont] == 22):
		VitE+=1
	cont+=1

print(cont)
if (VitE > VitB):
	print("EUSAPIA")
elif(VitE < VitB):
	print("BARSANULFO")
else:
	print("EMPATE")'''
-- EXECUTION TIME:
0.335588
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
